// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hooks > BuildContext > should provide pkg info in context 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > BuildContext > should provide pkgDir in context 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > end hook > should execute end hook after build completes 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > end hook > should support async end hook 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > entries hook > should allow modifying entries in hook 1`] = `
"## index.mjs

\`\`\`js
const e=\`world\`;export{e as hello};
\`\`\`
"
`;

exports[`hooks > entries hook > should execute entries hook with normalized entries 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > hook execution order > should execute hooks in correct order: start -> entries -> rolldownConfig -> rolldownOutput -> end 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > multiple hooks combined > should support all hooks together 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const version = "1.0.0";

//#endregion
export { version };
\`\`\`
"
`;

exports[`hooks > rolldownConfig hook > should execute rolldownConfig hook before rolldown build 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > rolldownOutput hook > should execute rolldownOutput hook before output generation 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > start hook > should execute start hook at the beginning of build 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;

exports[`hooks > start hook > should support async start hook 1`] = `
"## index.mjs

\`\`\`js
//#region index.ts
const hello = "world";

//#endregion
export { hello };
\`\`\`
"
`;
